--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>3.47.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
